2002-05-23  Joe Shaw  <joe@ximian.com>

	* acconfig.h: undef SOUP_GLIB2

	* configure.in: Check for glib 1.2 or 2.0 depending on whether the
	--enable-glib2 configure flag was passed in.

	* soup.pc.in: Get the requirements for pkgconfig from a variable
	in configure.in.

	* src/soup-ssl-proxy/soup-openssl.c: Port (conditionally) to glib 2.

2002-05-23  Dan Winship  <danw@ximian.com>

	* src/libsoup/Makefile.am (libsoupinclude_HEADERS): install
	soup-ntlm.h

	* src/libsoup/soup-ntlm.c (soup_ntlm_parse_challenge): Separated
	out of soup_ntlm_response. Takes the challenge and returns the
	nonce and default domain from it. (The application can use this
	from a 401 handler to find the domain name when using NTLM auth.)
	(soup_ntlm_response): Remove the challenge-parsing code from here.
	Just take the nonce instead.

	* src/libsoup/soup-auth.c (ntlm_init): Update for soup-ntlm
	changes. Don't parse the authmech twice since there's no reason
	to.

2002-05-06  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-headers.c (soup_headers_parse_request):
	sizeof() on a static string includes the terminating nul, whereas
	the length being passed in from the GString doesn't, so subtract
	one from the sizeof().  Fixes a problem on the server when a valid
	request was made, but there weren't any headers.

	* src/libsoup/soup-server.c (issue_bad_request): Set a 400 Bad
	Request error code on the message and write the response to the
	requesting client.
	(read_headers_cb): In THROW_MALFORMED_HEADER, call
	issue_bad_request() and return SOUP_TRANSFER_CONTINUE instead of
	END so the message can be processed and cleaned up.
	(write_header, get_response_header, set_response_error): Move
	these up in the file so issue_bad_request() can use them.

2002-05-06  Dan Winship  <danw@ximian.com>

	* configure.in (SOUP_REVISION): Bump to 0.7.3

2002-05-03  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-context.c (soup_context_uri_hash,